location, gear and leagues not visible -- fixed

--- a/html/css/includes/activity.css
+++ b/html/css/includes/activity.css
@@ -41,11 +41,59 @@
 	display: block;
 }
 
-	#blog-section p{
-		color: #fff;
-		font-size: 20px;
-		line-height: 30px;
-	}
+#blog-section p{
+	color: #fff;
+	font-size: 20px;
+	line-height: 30px;
+}
+
+#events-section p{
+	color: #fff;
+	font-size: 20px;
+	line-height: 30px;
+}
+
+#gear-wrapper {
+	width:880px;
+	overflow-x: scroll;
+}
+
+#gear-wrapper .scrolling-div{
+
+	height: 600px;
+	width:2000px;
+	
+	margin-top: 40px;
+
+}
+
+.gear-container{
+	width:240px;
+	background: #FFFFFF;
+	padding: 25px;
+	margin: 20px 10px;
+	float: left;
+	height:550px;
+	display: inline;
+	vertical-align: top;
+}
+.gear-container img{
+	width : 150px;
+	padding: 25px;
+}
+.gear-container h3{
+	color: #000000;
+}
+
+::-webkit-scrollbar { 
+	display: none;
+}
+
+#league-section p{
+	color: #fff;
+	font-size: 20px;
+	line-height: 30px;
+}
 
 
 a.sportSelector{
@@ -87,4 +135,7 @@ a.sportSelector:active{
 	text-transform: uppercase;
 	font-size: 25px;
 	text-align: center;
+}
+#map-canvas{
+	height:500px;
 }
